DuPont DevSB/src/objects/appirio_core__Currency_Exchange_Rate__c.object
<CustomObject>
    <customHelpPage>appirio_core__CurrencyHelp</customHelpPage>
    <description>This core object is only used if you manage dated exchange rates using FinancialForce PSA instead of Salesforce advanced currency management. Defines the exchange rates--against the designated corporate currency--for each of your currencies. You can enter effective (start) and expiration (end) dates to define a dated exchange rate that is only effective over a certain time period.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>appirio_core__Currency_Code__c</fullName>
        <formula>appirio_core__Currency__r.appirio_core__Currency_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Currency__c</fullName>
        <description>This lookup references the Currency record for which the dated currency exchange rate applies.  The rate is always defined as how much of the referenced Currency is equal to 1 (one) unit of the Coprorate Currency on the specified effective date.</description>
        <inlineHelpText>This lookup references the Currency record for which the dated currency exchange rate applies.  The rate is always defined as how much of the referenced Currency is equal to 1 (one) unit of the Coprorate Currency on the specified effective date.</inlineHelpText>
        <label>Currency</label>
        <referenceTo>appirio_core__Currency__c</referenceTo>
        <relationshipLabel>Dated Exchange Rates</relationshipLabel>
        <relationshipName>Currency_Exchange_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appirio_core__Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date for which the dated currency exchange rate actually applies, even if it is being used for a broader date range.  Currency conversions would always look for most recent rate that is not in the future (i.e. today or earlier).</description>
        <inlineHelpText>Date for which the dated currency exchange rate actually applies, even if it is being used for a broader date range.  Currency conversions would always look for most recent rate that is not in the future (i.e. today or earlier).</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appirio_core__Expiration_Date__c</fullName>
        <description>Specifies the date on which this Exchange Rate expires, if any.  The Exchange Rate is valid until the day before the Expiration Date, or never expires if blank.</description>
        <formula>appirio_core__Next_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies the date on which this Exchange Rate expires, if any.  The Exchange Rate is valid until the day before the Expiration Date, or never expires if blank.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that this currency exchange rate record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions.</description>
        <inlineHelpText>If checked, indicates that this currency exchange rate record is only being used in test mode and is not to be used for &apos;real&apos; (production) exchange rate conversions.</inlineHelpText>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Is_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that this currency exchange rate record is invalid and is not to be used</description>
        <inlineHelpText>If checked, indicates that this currency exchange rate record is invalid and is not to be used</inlineHelpText>
        <label>Is Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Next_Effective_Date__c</fullName>
        <description>Defines the effective date of the subsequent exchange rate for the currency if any.  It will be blank for the most recent rate.  This field should be set automatically by the system.</description>
        <inlineHelpText>Defines the effective date of the subsequent exchange rate for the currency if any.  It will be blank for the most recent rate.  This field should be set automatically by the system.</inlineHelpText>
        <label>Next Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appirio_core__Rate__c</fullName>
        <description>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</description>
        <inlineHelpText>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Currency Exchange Rate</label>
    <listViews>
        <fullName>All_Active_Rate_Records</fullName>
        <columns>NAME</columns>
        <columns>appirio_core__Currency__c</columns>
        <columns>appirio_core__Currency_Code__c</columns>
        <columns>appirio_core__Rate__c</columns>
        <columns>appirio_core__Effective_Date__c</columns>
        <columns>appirio_core__Expiration_Date__c</columns>
        <columns>appirio_core__Is_Test__c</columns>
        <columns>appirio_core__Is_Void__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>appirio_core__Expiration_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Active Rate Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>appirio_core__All</fullName>
        <columns>NAME</columns>
        <columns>appirio_core__Currency__c</columns>
        <columns>appirio_core__Currency_Code__c</columns>
        <columns>appirio_core__Rate__c</columns>
        <columns>appirio_core__Effective_Date__c</columns>
        <columns>appirio_core__Expiration_Date__c</columns>
        <columns>appirio_core__Is_Test__c</columns>
        <columns>appirio_core__Is_Void__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CER-{0}</displayFormat>
        <label>Currency Exchange Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchange Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>